chore: change routing of registerUser
