# server/src/controllers/authController.ts
@@ -1,5 +1,31 @@
 import { Request, Response } from 'express';
-import { loginUser } from '../services/authService';
+import { registerUser, loginUser } from '../services/authService';
+
+export const register = async (req: Request, res: Response) => {
+    const { email, username, password } = req.body;
+    try {
+        const user = await registerUser(email, username, password);
+        res.status(201).json({
+            message: 'User registration successful',
+            data: [
+                {
+                    id: user.id,
+                    username: user.username,
+                    access_token: user.access_token
+                }
+            ]
+        })
+    } catch (error) {
+        if (error instanceof Error) {
+            if (error.message === 'Email already exists' || error.message === 'Username already exists') {
+                return res.status(409).json({ error: error.message });
+            }
+            res.status(400).json({ error: error.message });
+        } else {
+            res.status(500).json({ error: 'Internal Server Error' });
+        }
+      }
+};
 
 export const login = async (req: Request, res: Response) => {
     const { email, password } = req.body;
